[package]
name = "cli"
version = "0.0.1"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]

edition = "2024"
rust-version = "1.90"

categories = ["parsing"]

readme = "../README.md"
license = "MIT"
repository = "https://github.com/xairaven/x-followers"

[lints]
workspace = true

[dependencies]
api = { path = "../api" }

chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
thiserror = "2.0.17"